# Antares

./: .env.example  .gitignore  CHANGE.md  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  requirements.txt  vercel.json
.claude/: DESIGN.json  DESIGN.md  PRODUCT.md  performance-bottlenecks.md  plan.md  settings.local.json
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: answerer.py  blob_client_token.py  config.py  create_upload_token.py  database.py  document_store.py  embedder.py  embedding.py  generator.py  indexing.py  ingestion.py  ingestion_service.py  interfaces.py  main.py  pdf.py  pdf_parser.py  pdf_reader.py  pipeline.py  schemas.py  search.py  services.py  setup.py  storage.py  utils.py  vercel_blob.py
backend/src/advisories/: ingestion.py  osv.py  schemas.py
backend/src/backends/: embeddings.py  search.py  storage.py
backend/src/inference/: embedding.py  generator.py
backend/src/inference/adapters/: __init__.py  base.py  claude.py  huggingface.py
backend/src/ingestion/: pdf_parser.py  service.py  upload_token.py
backend/src/pipeline/: ingestion.py
backend/src/storage/: chunks.py  database.py  messages.py  uploads.py
backend/src/utils/: latency.py  logger.py  pdf_reader.py
backend/tests/: qa_pairs.json  results.txt  test_api.py  test_database.py  test_end_to_end.py  test_inference.py
backend/tests/retriever-evaluation/: answer_quality.py  aq_results.json  evaluate.py  generate_gold_set.py  qa_pairs.json  results.json  results.txt
docs/: changes.md
src/: app.py  (+8 more)
(+16 files in other folders)
