[project]
name = "antares"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pypdf",
    "pydantic-settings",
    "psycopg[binary]",
    "psycopg-pool",
    "httpx",
    "huggingface_hub",
    "tiktoken",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "python-dotenv",
    "tqdm",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
